fix: Imprved wrapping for decision button overflow
Fixes: #412

--- a/src/components/decision/verification/css/style.css
+++ b/src/components/decision/verification/css/style.css
@@ -34,6 +34,14 @@
   }
 }
 
+.decision-group {
+  /*
+    By using box-decoration-break, it will round the edges if the content
+    wraps.
+  */
+  box-decoration-break: clone;
+}
+
 .additional-tags {
   padding: 0.3em;
   padding-top: 0;
